# artificial-data

./: README.md  poetry.toml  pyproject.toml
artificial-data/: electricity-meterings.json
src/: electricity_smart_meter_data_generator.py
